--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -1,3 +1,4 @@
+
 .container {
   display: flex;
   justify-content: center;
@@ -8,15 +9,7 @@
   height: 100%;
   width: 100%;
 
-  /*background-image: url('src/assets/AdobeStock_74755985.jpeg');*/
-  /*background-image: url('src/assets/AdobeStock_2387440.jpeg');*/
-  /*background-image: url('src/assets/AdobeStock_374806029.jpeg');*/
-  /*background-image: url('src/assets/AdobeStock_696681233.jpeg');*/
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-attachment: fixed;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .appButton {
