--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,16 @@ html, body {
   bottom: 64px !important;
 }
 
+.page {
+  top: 0;
+  bottom:0;
+  height: 100%;
+  width: 100%;
+  position:fixed;
+  overflow-y:scroll;
+  overflow-x:hidden;
+}
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
